add finetune pipeline

--- a/analysis/EDA.ipynb
+++ b/analysis/EDA.ipynb
@@ -188,6 +188,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3f14c9d4-1f0a-49ce-8d28-803c66a256dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.to_csv('train.csv', header=True, index=False)\n",
+    "test_df.to_csv('test.csv', header=True, index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "21204971-da15-42ca-b2bf-136b979ad773",
    "metadata": {},
